--- a/Flask_app/templates/index.html
+++ b/Flask_app/templates/index.html
@@ -7,7 +7,13 @@
     <title>Final project</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="..\CSS\styles.css">
+
+    <!-- CSS link -->
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='Assets/styles.css') }}">
+
+    <!-- JS link -->
+    <script src="../static/Assets/bmi_calculator.js" charset="utf-8"></script>
+    
 </head>
 
 <body>
@@ -18,7 +24,30 @@
             </nav>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-5">
+                    <div class="box" class="col-md-4">
+                        <div>
+                            <p id="intro">Calculate your BMI (body mass index) by using the form below. Enter your weight and height and click the Calculate button to display your BMI result.</p>
+                            <form action="none" method="post" name="bmiform">
+                                <fieldset>
+                                <legend>Height and Weight</legend>
+                                    <label for="pounds">Weight (pounds):</label>
+                                    <input type="text" name="pounds" id="pounds">
+                                    <br>
+                                    <label for="inches">Height (inches):</label>
+                                    <input type="text" name="inches" id="inches">
+                                    <br>
+                                    <button type="button" name="calculate" value="Calculate your BMI" onclick="calcBMI()">Calculate your BMI</button>
+                                </fieldset>
+                                <fieldset>
+                                <legend>BMI</legend>
+                                    <label for="bmi" id="bmi_label">Your calculated BMI is:</label>
+                                    <input type="text" name="bmi" id="bmi" readonly="readonly">
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-md-4">
                         <!-- Left Content Box -->
                         <div class="box" style="padding-bottom: 20px;">
                             <div class="box">
@@ -108,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-4">
                         <!-- Right Content Box -->
                         <div class="box" style="padding-bottom: 20px;">
                             <h3 class="title">Output:</h3>
